--- a/docker_mongodb_cluster/mongod/Dockerfile
+++ b/docker_mongodb_cluster/mongod/Dockerfile
@@ -2,13 +2,11 @@ FROM ubuntu:latest
 
 #TODO - https://docs.docker.com/examples/mongodb/
 
-# Add 10gen official apt source to the sources list
 RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10
 RUN echo 'deb http://downloads-distro.mongodb.org/repo/ubuntu-upstart dist 10gen' | tee /etc/apt/sources.list.d/10gen.list
 
 # Install MongoDB
-RUN apt-get update
-RUN apt-get install mongodb-10gen
+RUN apt-get update && apt-get install -y mongodb-org=2.6.4 mongodb-org-server=2.6.4 mongodb-org-shell=2.6.4 mongodb-org-mongos=2.6.4 mongodb-org-tools=2.6.4
 
 # Create the MongoDB data directory
 RUN mkdir -p /data/mongodb
